Fix pending children side effects bug
Bug: http://scons.tigris.org/issues/show_bug.cgi?id=2777
Change-Id: Iafa328a0430c675d52cdba50e6984e4c3e74e29e
Credit-to: Emil Stanchev <estanchev@tigris.org>
Origin: http://scons.tigris.org/nonav/issues/showattachment.cgi/894/Fix-a-pending-children-and-side-effects-bug_v3.patch

--- a/src/CHANGES.txt
+++ b/src/CHANGES.txt
@@ -33,6 +33,9 @@ RELEASE  VERSION/DATE TO BE FILLED IN LATER
       This was introduced by a pull request to allow recursive variable evaluations to yield a string
       such as "$( $( some stuff $) $)".
 
+  From Philippe Coval:
+    - Fix pending pending children side effects bug (Credit to Emil Stanchev)
+
 RELEASE 3.0.0 - Mon, 18 Sep 2017 08:32:04 -0700
 
 NOTE: This is a major release.  You should expect that some targets may rebuild when upgrading.
