--- a/src/CHANGES.txt
+++ b/src/CHANGES.txt
@@ -8,6 +8,9 @@
 RELEASE 3.1.0.alpha.yyyymmdd - NEW DATE WILL BE INSERTED HERE
 
   From Daniel Moody:
+    - Removed some magic numbers from jar.py on behalf of Mats Wichmann (mats@linux.com)
+
+  From Daniel Moody:
     - Jar can take multiple targets, and will make a duplicate jar from the sources for each target
     - Added some warnings in case the Jar builder makes an implicit target
     - Added Jar method and changed jar build to be more specific. Jar method will take in
