--- a/src/CHANGES.txt
+++ b/src/CHANGES.txt
@@ -47,6 +47,9 @@ RELEASE 3.1.0.alpha.yyyymmdd - NEW DATE WILL BE INSERTED HERE
   From Zachary Tessler:
     - Fix incorrect warning for repeated identical builder calls that use overrides
 
+  From Andrew Featherstone
+    - Removed unused --warn options from the man page and source code. 
+ 
 RELEASE 3.0.0 - Mon, 18 Sep 2017 08:32:04 -0700
 
 NOTE: This is a major release.  You should expect that some targets may rebuild when upgrading.
