Fix CHANGES.txt.  3.0.1 changes had merge issue and weren't segregated from new changes.

--- a/src/CHANGES.txt
+++ b/src/CHANGES.txt
@@ -7,10 +7,15 @@
 
 RELEASE 3.1.0.alpha.yyyymmdd - NEW DATE WILL BE INSERTED HERE
 
+  From Andrew Featherstone
+    - Removed unused --warn options from the man page and source code. 
+
   From Daniel Moody:
     - Updated Jar builder to handle nodes and directories better
     - Updated Jar builder to flatten source list which could contain embedded lists
     - Removed some magic numbers from jar.py on behalf of Mats Wichmann (mats@linux.com)
+
+RELEASE 3.0.1 - Mon, 12 Nov 2017 15:31:33 -0700
 
   From Daniel Moody:
     - Jar can take multiple targets, and will make a duplicate jar from the sources for each target
@@ -52,8 +57,6 @@ RELEASE 3.1.0.alpha.yyyymmdd - NEW DATE WILL BE INSERTED HERE
   From Zachary Tessler:
     - Fix incorrect warning for repeated identical builder calls that use overrides
 
-  From Andrew Featherstone
-    - Removed unused --warn options from the man page and source code. 
  
 RELEASE 3.0.0 - Mon, 18 Sep 2017 08:32:04 -0700
 
