Fix problem with Install and multiple dirs outside src tree.
In some cases it's possible to get a case where the target
path already does exist, but the dir node for it hasn't been
updated yet. This fix prevents MkdirFunc from trying to create
it when it already exists. Added a testcase which failed before
the fix and works after it.

Also fixes a problem running tests on Windows, using standard
python 3 which is installed in "C:/Program Files/Python36".
The python path name has to be escaped in that case. See runtest.py.

--- a/src/CHANGES.txt
+++ b/src/CHANGES.txt
@@ -7,11 +7,14 @@
 
 RELEASE 3.1.0.alpha.yyyymmdd - NEW DATE WILL BE INSERTED HERE
 
+  From Gary Oberbrunner:
+    - Fix bug when Installing multiple subdirs outside the source tree
+
   From Mats Wichmann:
     - Updated manpage scons.xml to fix a nested list problem
-    
+
   From Andrew Featherstone
-    - Removed unused --warn options from the man page and source code. 
+    - Removed unused --warn options from the man page and source code.
 
   From Daniel Moody:
     - Updated Jar builder to handle nodes and directories better
