Prevent TypeError with None in error message
I ran into a problem where SCons was generating an error that
contained a None (don't ask me how), and this got passed through
to_str() which caused a TypeError because None isn't a bytes-like
object.

I fixed it two ways: enable to_str and to_bytes to handle None without
complaint, and change Errors.py to use to_String() instead of to_str(),
since it seems more robust.

--- a/src/CHANGES.txt
+++ b/src/CHANGES.txt
@@ -9,6 +9,7 @@ RELEASE 3.1.0.alpha.yyyymmdd - NEW DATE WILL BE INSERTED HERE
 
   From Gary Oberbrunner:
     - Fix bug when Installing multiple subdirs outside the source tree
+    - fix to_str to handle None without raising exception
 
   From Mats Wichmann:
     - Updated manpage scons.xml to fix a nested list problem
