Use prepend for inserts
A number of places "append to the beginning", a better
word to use here is "prepend".  This is a documentation
issue only, no executable statements are affected.

Signed-off-by: Mats Wichmann <mats@linux.com>

--- a/src/CHANGES.txt
+++ b/src/CHANGES.txt
@@ -13,6 +13,7 @@ RELEASE 3.1.0.alpha.yyyymmdd - NEW DATE WILL BE INSERTED HERE
 
   From Mats Wichmann:
     - Updated manpage scons.xml to fix a nested list problem
+    - Updated doc terminionly: use prepend instead of append as appropriate
 
   From Andrew Featherstone
     - Removed unused --warn options from the man page and source code.
