--- a/src/CHANGES.txt
+++ b/src/CHANGES.txt
@@ -8,18 +8,11 @@
 RELEASE 3.1.0.alpha.yyyymmdd - NEW DATE WILL BE INSERTED HERE
 
   From Ray Donnelly:
-    - Do not assume execeutables launched via scons.bat can handle unnormalised paths.
-      Python 3.6 cannot for a start: https://bugs.python.org/issue32457. To be exact
-      this means we must not add '..', and instead use 'pushd' and '%CD%' to add the
-      parent directory to PATH.
-
-  From Gary Oberbrunner:
-    - Fix bug when Installing multiple subdirs outside the source tree
-    - fix to_str to handle None without raising exception
-
-  From Mats Wichmann:
-    - Updated manpage scons.xml to fix a nested list problem
-    - Updated doc terminionly: use prepend instead of append as appropriate
+    - Fix the PATH created by scons.bat (and other .bat files) to provide a normalized
+      PATH.  Some pythons in the 3.6 series are no longer able to handle paths which
+      have ".." in them and end up crashing.  This is done by cd'ing into the directory
+      we want to add to the path and then useing %CD% to give us the normalized directory
+      See bug filed under Python 3.6: https://bugs.python.org/issue32457.
 
   From Andrew Featherstone
     - Removed unused --warn options from the man page and source code.
@@ -28,6 +21,14 @@ RELEASE 3.1.0.alpha.yyyymmdd - NEW DATE WILL BE INSERTED HERE
     - Updated Jar builder to handle nodes and directories better
     - Updated Jar builder to flatten source list which could contain embedded lists
     - Removed some magic numbers from jar.py on behalf of Mats Wichmann (mats@linux.com)
+
+  From Gary Oberbrunner:
+    - Fix bug when Installing multiple subdirs outside the source tree
+    - fix to_str to handle None without raising exception
+
+  From Mats Wichmann:
+    - Updated manpage scons.xml to fix a nested list problem
+    - Updated doc terminionly: use prepend instead of append as appropriate
 
 RELEASE 3.0.1 - Mon, 12 Nov 2017 15:31:33 -0700
 
