--- a/src/CHANGES.txt
+++ b/src/CHANGES.txt
@@ -8,9 +8,10 @@
 RELEASE 3.1.0.alpha.yyyymmdd - NEW DATE WILL BE INSERTED HERE
 
   From Daniel Moody:
-    - Made a small change to scons main __init__.py to set the pickling protocal 
-      to choose the latest which fixed 2 failing test varient dir test from Interactive
-
+    - Set the pickling protocal back to highest which was causing issues 
+      with variant dir tests. This will cause issues if reading sconsigns
+      pickled with the previous lower protocal.
+      
   From Ray Donnelly:
     - Fix the PATH created by scons.bat (and other .bat files) to provide a normalized
       PATH.  Some pythons in the 3.6 series are no longer able to handle paths which
