--- a/src/CHANGES.txt
+++ b/src/CHANGES.txt
@@ -8,7 +8,7 @@
 RELEASE 3.1.0.alpha.yyyymmdd - NEW DATE WILL BE INSERTED HERE
 
   From Richard West:
-    - Add SConstruct.py to the search path for the root SConstruct file.
+    - Add SConstruct.py and sconstruct.py to the search path for the root SConstruct file.
       Allows easier debugging within Visual Studio
 
   From Daniel Moody:
