--- a/src/CHANGES.txt
+++ b/src/CHANGES.txt
@@ -19,6 +19,7 @@ RELEASE 3.1.0.alpha.yyyymmdd - NEW DATE WILL BE INSERTED HERE
    - Fixed handling of side-effects in task master (fixes #3013).
 
   From Daniel Moody:
+    - Updated gettext tools to setup default paths for windows with Cygwin/MinGW setups
     - Add common location for default paths for cygwin and mingw in Platform modules
     - Updated YACC tool to work on windows with Cygwin/MinGW setups
     - Set the pickling protocal back to highest which was causing issues 
