Update CHANGES.txt as well

--- a/src/CHANGES.txt
+++ b/src/CHANGES.txt
@@ -7,6 +7,9 @@
 
 RELEASE 3.1.0.alpha.yyyymmdd - NEW DATE WILL BE INSERTED HERE
 
+  From Mats Wichmann:
+    - xml validity fixes from SConstruct.py change
+
   From Richard West:
     - Add SConstruct.py, Sconstruct.py, sconstruct.py to the search path for the root SConstruct file.
       Allows easier debugging within Visual Studio
@@ -50,7 +53,7 @@ RELEASE 3.1.0.alpha.yyyymmdd - NEW DATE WILL BE INSERTED HERE
 
   From Mats Wichmann:
     - Updated manpage scons.xml to fix a nested list problem
-    - Updated doc terminionly: use prepend instead of append as appropriate
+    - Updated doc terminiology: use prepend instead of append as appropriate
 
   From Jonathon Reinhart:
     - Replace all instances of `int main()` in C code with `int main(void)`.
