Do not reuse tempfiles
Actions lists with more than one action using ${TEMPFILE("TEMP FILE CONTENT")}
should not use the same tempfile for different "TEMP FILE CONTENT".
Therefore we cannot store the cmd_list in niether the target nor the
source attributes since those are common for all actions.

Reusing the same tempfile causes the same command to be invoked
for all actions in the list. However, not resusing tempfiles will
create unneeded tempfiles on strfunction invocation. This is better
than producing incorrect results, but leaves the tempfile in a bad
state.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -51,6 +51,10 @@ RELEASE  VERSION/DATE TO BE FILLED IN LATER
     - Suppress missing SConscript deprecation warning if `must_exist=False`
       is used.
 
+  From Simon Tegelid
+    - Fix using TEMPFILE in multiple actions in an action list.
+
+
 
 RELEASE 4.0.1 - Mon, 16 Jul 2020 16:06:40 -0700
 
