--- a/src/CHANGES.txt
+++ b/src/CHANGES.txt
@@ -97,6 +97,9 @@ RELEASE 3.1.0.alpha.yyyymmdd - NEW DATE WILL BE INSERTED HERE
     - xml validity fixes from SConstruct.py change
     - update wiki links to new github location
     - update bug links to new github location
+    
+  From Hao Wu
+    - typo in customized decider example in user guide 
 
 
 
