--- a/src/CHANGES.txt
+++ b/src/CHANGES.txt
@@ -98,6 +98,9 @@ RELEASE 3.1.0.alpha.yyyymmdd - NEW DATE WILL BE INSERTED HERE
     - update wiki links to new github location
     - update bug links to new github location
 
+  From Hao Wu
+    - Replace usage of unittest.TestSuite with unittest.main() (fix #3113)
+
 
 
 
