Fix -jN for Python3.7, which always has thread support

--- a/src/CHANGES.txt
+++ b/src/CHANGES.txt
@@ -78,6 +78,7 @@ RELEASE 3.1.0.alpha.yyyymmdd - NEW DATE WILL BE INSERTED HERE
   From Gary Oberbrunner:
     - Fix bug when Installing multiple subdirs outside the source tree
     - fix to_str to handle None without raising exception
+    - Fix -jN for python 3.7
 
   From Jonathon Reinhart:
     - Replace all instances of `int main()` in C code with `int main(void)`.
