Add error-on-warning control
Add --werror, and SetOption('werror'), to allow specified warnings
to be treated as errors (exceptions).

--werror syntax is the same as --warn.

Warnings have defaults built-in based on subclassing; scons maintains a
list of tuples as an override to hold explicit requests to warn or not
warn, populated from command line, SetOption, and a built-in table.
The list is looked up using a first-find basis, so it is sufficient
to insert a new value at the front.  The override tuple is expanded
to contain a setting for warning-errors as well.

Signed-off-by: Mats Wichmann <mats@linux.com>

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -27,6 +27,9 @@ RELEASE  VERSION/DATE TO BE FILLED IN LATER
   From Mats Wichmann:
     - Complete tests for Dictionary, env.keys() and env.values() for
       OverrideEnvironment. Enable env.setdefault() method, add tests.
+    - Add support for indicating warnings to be treated as errors,
+      both via a new --werror= flag (syntax like --warn), and via
+      SetOption('werror').
 
   From Joachim Kuebart:
     - Suppress missing SConscript deprecation warning if `must_exist=False`
