Update java version support
Although the newer versions are marketed as simple versions, scons will
see them as dotted versions: 9.0, 10.0.  Add some comments to this in
test code - the RMI test skip ought to work as long as they stay dotted
versions (since 10.0 >= 1.8); that code does run the test for a simple
version like '6'.

Signed-off-by: Mats Wichmann <mats@linux.com>

--- a/src/CHANGES.txt
+++ b/src/CHANGES.txt
@@ -93,6 +93,7 @@ RELEASE 3.1.0.alpha.yyyymmdd - NEW DATE WILL BE INSERTED HERE
       This changes SCons to better comply with normal Python installation practices.
 
   From Mats Wichmann:
+    - Recognize new java 9, 10 (as 9.0 and 10.0)
     - Updated manpage scons.xml to fix a nested list problem
     - Updated doc terminiology: use prepend instead of append as appropriate
     - xml validity fixes from SConstruct.py change
