Fix py3 ResourceWarning in TestCmd
class TestCmd method read() uses a shortcut to return data from
a file, "return open(...).read()".  Python 3 warns this is a
resource leak because the file has no chance to be closed with
the open being in the return statement.  Split into two lines
and use a context manager (with statement).

Signed-off-by: Mats Wichmann <mats@linux.com>

--- a/src/CHANGES.txt
+++ b/src/CHANGES.txt
@@ -102,6 +102,7 @@ RELEASE 3.1.0.alpha.yyyymmdd - NEW DATE WILL BE INSERTED HERE
     - xml validity fixes from SConstruct.py change
     - update wiki links to new github location
     - update bug links to new github location
+    - convert TestCmd.read to use with statement on open (quiets 17 py3 warnings)
     
   From Hao Wu
     - typo in customized decider example in user guide 
