Change octal constants in QT tests
Resolving two test failures in Python 3 caused by:
http://www.python.org/dev/peps/pep-3127/:

    octal literals must now be specified with a leading "0o" or "0O" instead of "0";

Signed-off-by: Mats Wichmann <mats@linux.com>

--- a/src/CHANGES.txt
+++ b/src/CHANGES.txt
@@ -104,6 +104,7 @@ RELEASE 3.1.0.alpha.yyyymmdd - NEW DATE WILL BE INSERTED HERE
     - update bug links to new github location
     - convert TestCmd.read to use with statement on open (quiets 17 py3 warnings)
     - quiet warning in UtilTests.py
+    - fix tests specifying octal constants for Py3
     
   From Hao Wu
     - typo in customized decider example in user guide 
