--- a/src/CHANGES.txt
+++ b/src/CHANGES.txt
@@ -7,7 +7,10 @@
 
 RELEASE 3.1.0.alpha.yyyymmdd - NEW DATE WILL BE INSERTED HERE
 
-  From Matthew Marinets
+  From Daniel Moody:
+    - Updated FS.py to handle removal of splitunc function from python 3.7
+
+  From Matthew Marinets:
     - Fixed an issue that caused the Java emitter to incorrectly parse arguments to constructors that 
       implemented a class.
 
