Fix a couple of java tests that use swig
Getting missing jni.h because tests don't include the header file that
was discovered (or in one case, wasn't even getting discovered)

For header discovery, add the common path used by Fedora/RHEL,
which is different than that used by Ubuntu/Debian, even though
both use alternatives to have a path point to the default.

Signed-off-by: Mats Wichmann <mats@linux.com>

--- a/src/CHANGES.txt
+++ b/src/CHANGES.txt
@@ -165,6 +165,7 @@ RELEASE 3.1.0.alpha.yyyymmdd - NEW DATE WILL BE INSERTED HERE
       Three uses of variables not defined are changed.
     - Some script changes in trying to find scons engine
     - Update (pep8) configure-cache script, add a --show option.
+    - Fix the two java tests which use SWIG to discover/use path to jni.h.
 
   From Bernhard M. Wiedemann:
     - Update SCons' internal scons build logic to allow overriding build date 
