--- a/src/CHANGES.txt
+++ b/src/CHANGES.txt
@@ -9,8 +9,10 @@ RELEASE 3.0.3 - Mon, 07 Jan 2019 20:05:22 -0400
   NOTE: 3.0.2 release was dropped because there was a packaging bug. Please consider all 3.0.2
         content.
 
-  From William Deegan:
+  From Daniel Moody:
+    - Improved support for VC14.1 and Visual Studio 2017, as well as arm and arm64 targets.
 
+  From William Deegan:
     - Fixes to packaging logic.  Ensuring the SCons.Tool.clangCommon module is added
       to the release packages.
     - Modify scons.bat script to check for scons python script without .py extension if no file
