--- a/src/CHANGES.txt
+++ b/src/CHANGES.txt
@@ -5,7 +5,7 @@
                             Change Log
 
 
-RELEASE  VERSION/DATE TO BE FILLED IN LATER
+RELEASE 3.0.4 - Mon, 20 Jan 2019 22:49:27 +0000
 
   From Mats Wichmann:
     - Improve finding of Microsoft compiler: add a 'products' wildcard
