--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+scons (3.0.5) unstable; urgency=low
+
+  * Maintenance Release
+
+ -- William Deegan <bill@baddogconsulting.com>  Mon, 26 Mar 2019 15:04:42 -0700
+
 scons (3.0.4) unstable; urgency=low
 
   * Maintenance Release
