Update CHANGES for VS2019 support.

--- a/src/CHANGES.txt
+++ b/src/CHANGES.txt
@@ -70,6 +70,9 @@ RELEASE  VERSION/DATE TO BE FILLED IN LATER
   From Mathew Robinson:
     - Update cache debug output to include cache hit rate.
 
+  From Bert Huijben:
+    - Added support for Visual Studio 2019 toolset.
+
 RELEASE 3.0.5 - Mon, 26 Mar 2019 15:04:42 -0700
 
   From William Deegan:
