changes for release 3.1.0

--- a/src/CHANGES.txt
+++ b/src/CHANGES.txt
@@ -4,18 +4,11 @@
 
                             Change Log
 
-
-**PLEASE ADD YOUR NAME IN ALPHABETICAL ORDER TO AVOID NEEDED TO REORDER BELOW**
-
-RELEASE  VERSION/DATE TO BE FILLED IN LATER
+RELEASE 3.1.0 - Mon, 20 Jul 2019 16:59:23 -0700
 
   From Joseph Brill:
     - Code to supply correct version-specifier argument to vswhere for
       VS version selection.
-
-  From Peter Diener:
-    - Additional fix to issue #3135 - Also handle 'pure' and 'elemental' type bound procedures
-    - Fix issue #3135 - Handle Fortran submodules and type bound procedures
 
   From William Deegan:
     - Enhanced --debug=explain output. Now the separate components of the dependency list are split up
@@ -52,6 +45,10 @@ RELEASE  VERSION/DATE TO BE FILLED IN LATER
           def my_decider(dependency, target, prev_ni, repo_node):
       Where repo_node is the repository (or other) node to use to check if the node is out of date instead of dependency.
 
+  From Peter Diener:
+    - Additional fix to issue #3135 - Also handle 'pure' and 'elemental' type bound procedures
+    - Fix issue #3135 - Handle Fortran submodules and type bound procedures
+
   From Adam Gross:
     - Upgraded and improved Visual Studio solution/project generation code using the MSVSProject builder.
       - Added support for Visual Studio 2017 and 2019.
@@ -68,6 +65,7 @@ RELEASE  VERSION/DATE TO BE FILLED IN LATER
   From Mathew Robinson:
     - Update cache debug output to include cache hit rate.
     - No longer unintentionally hide exceptions in Action.py
+    - Allow builders and pseudo-builders to inherit from OverrideEnvironments
 
   From Leonard de Ruijter:
     - Add logic to derive correct version argument to vswhere
@@ -102,10 +100,6 @@ RELEASE  VERSION/DATE TO BE FILLED IN LATER
     - Fix more re patterns that contain \ but not specified as raw strings
       (affects scanners for D, LaTeX, swig)
 
-  From Mathew Robinson:
-    - Update cache debug output to include cache hit rate.
-    - No longer unintentionally hide exceptions in Action.py
-    - Allow builders and pseudo-builders to inherit from OverrideEnvironments
 
 RELEASE 3.0.5 - Mon, 26 Mar 2019 15:04:42 -0700
 
